💫 attempting to fix iphone transition flicker w backface-visibility

--- a/src/style.css
+++ b/src/style.css
@@ -53,8 +53,9 @@ body {
   justify-content: center;
   align-content: center;
   background: radial-gradient(var(--bg-light), var(--trans-yellow));
-
   transition: background-color 1s ease-in;
+  perspective: 1000;
+  backface-visibility: hidden;
 }
 
 /* Page structure */
@@ -120,10 +121,14 @@ body {
 .content .head-lavonnes span,
 .content .head-childcare span {
   transition: all 0.4s cubic-bezier(0.96, 0.09, 0.36, 1.88);
+  perspective: 1000;
+  backface-visibility: hidden;
 }
 
 .content .head-miss span {
   transition: all 0.4s cubic-bezier(0.96, 0.09, 0.36, 1.88);
+  perspective: 1000;
+  backface-visibility: hidden;
 }
 
 /* style 'Miss' letters */
@@ -220,6 +225,8 @@ input {
   background: white;
   box-shadow: 1px 1px 1px var(--black);
   transition: all 0.4s ease-in;
+  perspective: 1000;
+  backface-visibility: hidden;
 }
 
 input:not(:checked) {
@@ -236,6 +243,8 @@ input[type='radio']::before {
   transform: translate(2px, 1px) scale(1);
   transform-origin: center;
   transition: all 0.4s ease-in;
+  perspective: 1000;
+  backface-visibility: hidden;
 }
 
 .red-button input::before {
@@ -255,6 +264,8 @@ input[type='radio']:checked::before {
   background-color: var(--black);
   opacity: 0.2;
   transition: all 0.4s ease-in;
+  perspective: 1000;
+  backface-visibility: hidden;
 }
 
 .yellow-button input:checked {
@@ -276,6 +287,8 @@ input[type='radio']:checked::before {
 
 i {
   transition: all 5s ease-in;
+  perspective: 1000;
+  backface-visibility: hidden;
   opacity: 0;
   text-shadow: 2px 2px var(--black);
   overflow: hidden;
@@ -327,6 +340,8 @@ button {
   border: 2px var(--black) solid;
   transform: skew(10deg) rotate(2deg);
   transition: all 0.3s ease-in;
+  perspective: 1000;
+  backface-visibility: hidden;
   box-shadow: 3px 3px 5px var(--black);
 }
 
